	New check_oracle --connect option to perform real login
	New check_nagios -t option to override the default timeout
	New check_disk -N/--include-type option to limit the filesystem types to check
	Allow for building the plugins in parallel
	Add --without-{dbi,ldap,radius} options to ./configure
	Made Verbose output of check_sensors compliant (Gabriele Tozzi)

	FIXES
	Change the MAIL FROM command generated by check_smtp to be RFC compliant
	Fix compilation of check_http without SSL support
	Fix check_snmp reversed threshold ranges (backward-compatibility)
	Fix check_snmp memory violation when using more than 8 oids (Robin Sonefors)
	Fix check_apt security regular expression (Alex Bradley)
	Fix check_http handling extra header (-k) containing semicolons (Richard Leitner)
	Fix check_apt handling unknown exit codes from apt-get (Richard Leitner)
	Fix deprecated imports of check_nmap.py (Fabio Rueda)

	WARNINGS
	check_http behaviour of -k/--header changed since it does not seperate multiple headers by semicolons anymore. Use multiple -k switches instead.

1.4.16 27th June 2012
	ENHANCEMENTS
	check_nt UPTIME accepts warning/critical thresholds (Ryan Kelly)
	check_disk_smb now allows spaces in share names (#990948, #1370031, Debian #601699)
	check_http now uses standard threshold functions (enables floating point and ranges)
	check_http now checks for and prints the certificate cn (hostname) in SSL certificate checks (Stéphane Urbanovski)
	check_http now supports an optional -S/--ssl value to choose the SSL protocol version (#3066166 - Jason Lunn)
	Add perfdata to check_ssh (#3244097 - Marco Beck)
	New option to check_smtp to ignore failures when sending QUIT (#3358348 - Duncan Ferguson)
	New check_by_ssh -F option which allows for specifying an alternative ssh_config(5) file (#2895334 - Sven Nierlein)
	check_sensors now detects faulty sensors unless --ignore-fault is specified (Jan Wagner)
	utils.sh now provides a check_range function (Alex Griffin)