@@ -13,6 +13,7 @@ This file documents the major additions and syntax changes between releases.
 	Allow for building the plugins in parallel
 	Add --without-{dbi,ldap,radius} options to ./configure
 	Made Verbose output of check_sensors compliant (Gabriele Tozzi)
+	New switch -E/--extended-perfdata for check_http to print additional performance data (Sebastian Nohn)
 
 	FIXES
 	Change the MAIL FROM command generated by check_smtp to be RFC compliant
